<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RenameActivity" >

    <EditText
        android:id="@+id/editText_list_filter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/list_filter" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_ext_filter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/extension_filter"/>

    <TextView
        android:id="@+id/textView_rename_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/rename_type"
        android:textAppearance="@id/textView_rename_type"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_rename_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:spinnerMode="dialog"
        android:prompt="@string/rename_type"
        android:entries="@array/rename_type_list"/>

    <EditText
        android:id="@+id/editText_rename_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rename_pattern" />
    
    <EditText
        android:id="@+id/editText_rename_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rename_to" />

    <Button
        android:id="@+id/button_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rename_button"
        android:onClick="renameFiles" />

</TableLayout>
